added entitlement related fields in sales service